<resources>
    <string name="app_name">SaveThe Night</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="find_new_friends_nearby">Find new\n \tFriends Nearby</string>
    <string name="login">Login</string>
    <string name="save_text">With millions of users around the world,\nWe give you ability to connect with people no matter where you are</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create account</string>
    <string name="close">close</string>
    <string name="reset_password_description">Please Enter you email you will receive a link to set a new password via email</string>
    <string name="forgot_password">Forgot Password</string>
</resources>